<resources>
    <string name="app_name">Rezepte</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Einstellungen</string>
    <string name="dbExportFileName" translatable="false">datenbank</string>
    <string name="rezept_exportiert">Rezept als XML exportiert nach: %1$s</string>
    <string name="anzahl_personen">Bitte Anzahl Personen eingeben</string>
    <string name="anzahl_1">Rezept für 1 Portion</string>
    <string name="anzahl_mehrere">Rezept für %1$d Portionen</string>
    <string name="zutaten">Zutaten</string>
    <string name="rezept_share_name">Rezept für %1$s</string>
    <string name="senden_mit">Rezept senden mit</string>
    <string name="ALLE">ALLE</string>
    <string name="MARKIERTE">MARKIERTE</string>
    <string name="OK">OK</string>
    <string name="ABBRECHEN">ABBRECHEN</string>
    <string name="JA">JA</string>
    <string name="NEIN">NEIN</string>
    <string name="loeschen_zutaten">Zutaten löschen</string>
    <string name="loeschen_zutaten_text">Wollen Sie alle Zutaten oder nur die markierten löschen?</string>
    <string name="ek_liste_share_text">*_Bitte besorge folgendes:_*</string>
    <string name="speichern">speichern</string>
    <string name="speichern_text">Soll die Daten vor dem schließen gespeichert werden?</string>
    <string name="abbrechen">abbrechen</string>
    <string name="abbrechen_text">Wollen Sie wirklich abbrechen ohne die Daten zu speichern?</string>
    <string name="arbeitsschritt_name">Name des Arbeitsschrittes:</string>
    <string name="arbeitsschritt_bezeichnung">Bezeichnung Schritt %1$d</string>
    <string name="arbeitsschritte_ausfuellen">Bitte alle Bezeichnungen ausfüllen!</string>
    <string name="arbeitsschritte_max">Es sind maximal 5 Schritte möglich!</string>
    <string name="arbeitsschritte_loeschen">Arbeitsschritt löschen:</string>
    <string name="zutaten_fuer">Zutaten für:</string>
    <string name="nicht_leer">Bezeichnung darf nicht leer sein!</string>
    <string name="speichern_nicht_geändert">Es wurden keine Daten geändert!</string>
    <string name="speichern_ok">Daten wurden gespeichert</string>
    <string name="zubereitung">Zubereitung</string>
    <string name="steffens_rezepte">Steffen\'s Rezepte Version %1$s</string>
    <string name="steffens_rezepte_untertitel">Neue Ideen bitte direkt an mich!</string>
    <string name="kategorie">Kategorie</string>
    <string name="anzahl_portionen">Anzahl Portionen:</string>
    <string name="leere_liste">Keine Einträge in dieser Liste!</string>
    <string name="pfad">Pfad</string>
    <string name="einkaufsliste">Einkaufsliste</string>
    <string name="personen">Personen</string>
    <string name="m_rezepte_anzeigen">Rezepte anzeigen</string>
    <string name="m_einkaufsliste">Einkaufsliste anzeigen</string>
    <string name="m_rezept_import">Rezept importieren</string>
    <string name="m_rezept_export">Rezept exportieren</string>
    <string name="m_db_import">Datenbank importieren</string>
    <string name="m_db_export">Datenbank exportieren</string>
    <string name="m_rezept_neu">Neues Rezept</string>
    <string name="m_rezept_loeschen">Rezept löschen</string>
    <string name="m_rezept_aendern">Rezept ändern</string>
    <string name="m_rezept_umrechnen">Menge umrechnen</string>
    <string name="m_rezept_senden">Rezept versenden</string>
    <string name="m_rezept_speichern">Änderungen speichern</string>
    <string name="m_rezept_abbrechen">Änderungen verwerfen</string>
    <string name="m_schritt_neu">Arbeitsschritt hinzufügen</string>
    <string name="m_schritt_loeschen">Arbeitsschritt entfernen</string>
    <string name="m_ekl_loeschen">Zutaten löschen</string>
    <string name="m_ekl_neu">Zutaten manuell hinzufügen</string>
    <string name="m_ekl_senden">Einkaufsliste senden</string>
    <string name="m_ekl_bearbeiten">Einkaufsliste bearbeiten</string>
    <string name="m_filter">Rezepte nach Zutat filtern</string>
    <string name="m_neu">Neues Rezept hinzufügen</string>
    <string name="db_import">Datenbank importieren ...</string>
    <string name="db_import_ok">Datenbank erfolgreich importiert.</string>
    <string name="db_export">Datenbank exportieren ...</string>
    <string name="db_export_ok">Datenbank erfolgreich exportiert.</string>
    <string name="ek_liste_hinzugefuegt">Zutaten zur Einkaufsliste hinzugefügt!</string>
    <string name="rezept_import">Rezept wurde erfolgreich importiert.</string>
    <string name="xml_export_tabelle">Exportiere Tabelle: %1$s</string>
    <string name="xml_err_no_steffen">Datei ist keine gültige Rezeptdatei.</string>
    <string name="xml_err_kategorie">Ungültige Kategorie in XML-Datei.</string>
    <string name="xml_err_no_database">Datei ist keine gültige Rezepte-Datenbank.</string>
    <string name="xml_err_rezept_existiert">Rezept \'%1$s\' existiert bereits in der Datenbank!</string>
    <string name="xml_import_tabelle">Importiere Tabelle: %1$s</string>
    <string name="leeres_rezept">Kein Rezept ausgewählt!</string>
    <string name="filtern">Filtern</string>
    <string name="filtern_text">Nur Rezepte mit dieser Zutat anzeigen:</string>
    <string name="filter_loeschen">löschen</string>
    <string name="filter_mit">mit %1$s</string>
    <string name="rezepte_alle">Alle (%1$d)</string>
    <string name="bild_auswahl">Bild auswählen mit</string>
    <string name="ZURÜCK">ZURÜCK</string>
    <string name="rezepte_von_server">Rezepte von Server</string>
    <string name="_serverAdresse" translatable="false">https://yhhvf51d3ipjtidx.myfritz.net:3000/</string>
    <string name="server_suche_rezepte">Bitte warten - auf dem Server werden Rezepte gesucht</string>
    <string name="server_gespeichert">Auf dem Server gespeicherte Rezepte:</string>
    <string name="rezept">Rezept</string>
    <string name="einst_bildgroesse">Bildgröße</string>
    <string name="einst_bildgroesse_txt">Bitte wählen Sie mit welcher Auflösung die Rezeptbilder beim Import gespeichert werden sollen. Größere Werte verbrauchen mehr Speicher.</string>
    <string name="rezeptliste">Rezeptliste</string>
    <string name="einst_alle_rezepte">\"Alle Rezepte\" anzeigen</string>
    <string name="einst_alle_rezepte_txt">Wenn diese Option gesetzt ist wird in der Rezeptliste zusätzlich zu den Kategorien eine Registerkarte \"Alle Rezepte\" angezeigt.</string>
    <string name="einst_zutaten_unten">Eingekaufte Zutaten unten auflisten</string>
    <string name="einst_zutaten_unten_txt">Wenn diese Option gesetzt ist werden als eingekauft markierte Zutaten unter den noch nicht eingekauften Zutaten angezeigt. Ansonsten werden alle Zutaten, unabhängig vom Status,  alphabetisch sortiert.</string>
    <string name="einst_internet">Server-Optionen</string>
    <string name="einst_serveradresse">Rezepte-Server Adresse</string>
    <string name="einst_serveradresse_txt">URL oder IP-Adresse des Rezepteservers einschl. Portnummer</string>
    <string name="einst_benutzer">Ihr Benutzername</string>
    <string name="einst_benutzer_txt">Wird benötigt zur Anmeldung am Rezepteserver</string>
    <string name="einst_passwort">Ihr Passwort</string>
    <string name="server_fehler">Webservice Fehler %1$d (%2$s)</string>
    <string name="importieren">Rezept importieren?</string>
    <string name="importieren_txt">Wollen Sie wirklich das Rezept \'%1$s\' in Ihre Datenbank importieren?</string>
    <string name="server_refresh">Bitte im Menü den Refresh-Button drücken um die Rezeptliste vom Server einzulesen.</string>
    <string name="m_rezept_upload">Rezept auf den Server hochladen</string>
    <string name="m_rezept_download">Rezept vom Server herunterladen</string>
    <string name="m_anmelden">Anmeldung</string>
    <string name="löschen">Löschen</string>
    <string name="löschen_text">Wollen Sie dieses Rezept wirklich löschen?</string>
    <string name="m_registrieren">Registrieren</string>
    <string name="reg_email">E-Mail Adresse eingeben:</string>
    <string name="reg_pass1">Passwort eingeben:</string>
    <string name="reg_pass2">Passwort wiederholen:</string>
    <string name="reg_registrieren">Registrieren</string>
    <string name="reg_login">anmelden</string>
    <string name="reg_log_erfolgreich">Anmelden erfolgreich!</string>
    <string name="reg_reg_erfolgreich">Benutzerkonto erfolgreich angelegt!</string>
    <string name="reg_upload_ok">Rezept erfolgreich auf den Server übertragen!</string>
    <string name="appverlassen_titel">App verlassen?</string>
    <string name="appverlassen_text">Wollen Sie die App wirklich schließen?</string>
    <string name="reg_email_falsch">Keine gültige E-Mailadresse!</string>
    <string name="reg_pass_falsch">Passwortwiederholung falsch.</string>
    <string name="err_400">falsche Parameter</string>
    <string name="err_403_user">Benutzername oder Passwort falsch</string>
    <string name="err_409_user">Benutzername bereits vergeben</string>
    <string name="err_404_put">Rezept konnte nicht gespeichert werden</string>
    <string name="err_415">Datei war keine gültige Rezeptdatei</string>
    <string name="err_409_rezept">Rezept(e) existieren bereits</string>
    <string name="err_403_put">Benutzername oder Passwort falsch oder keine Schreibrechte</string>
    <string name="arr_resolution_name_1">200 x 200 pixel</string>
    <string name="arr_resolution_name_2">400 x 400 pixel</string>
    <string name="arr_resolution_name_3">800 x 800 pixel</string>
    <string name="arr_resolution_name_4">1200 x 1200 pixel</string>
    <string name="arr_resolution_value_1" translatable="false">200</string>
    <string name="arr_resolution_value_2" translatable="false">400</string>
    <string name="arr_resolution_value_3" translatable="false">800</string>
    <string name="arr_resolution_value_4" translatable="false">1200</string>
    <string name="reg_name">Benutzername eingeben:</string>
    <string name="reg_name_oder_eMail">Benutzername oder E-Mail Adresse eingeben:</string>
    <string name="einst_eMail">Ihre E-Mail Adresse</string>
    <string name="reg_alle_ausfüllen">Bitte alle Felder ausfüllen!</string>
    <string name="reg_log_illegal_returncode">Fehlerhafte Rückmeldung vom Server!</string>
    <string name="rezept_import_start">Rezept(e) werden im Hintergrund importiert.</string>
    <string name="m_stammdaten">Stammdaten</string>
    <string name="kategorien">Kategorien</string>
    <string name="einheiten">Einheiten</string>
    <string name="m_einstellungen">Einstellungen</string>
    <string name="m_datentransfer">Datentransfer</string>
    <string name="m_refresh">Aktualisieren</string>
    <string name="m_neuer_datensatz">Neuer Datensatz</string>
    <string name="ed_bez_singular">Singular:</string>
    <string name="ed_bez_plural">Plural:</string>
    <string name="ed_einheit">Mengeneinheit:</string>
    <string name="ed_shop">Geschäft:</string>
    <string name="ed_preis">Preis pro Packung:</string>
    <string name="ed_pack_gr">Packungsgröße</string>
    <string name="einheit">Einheit:</string>
    <string name="ed_umrechnung">Umrechnung:</string>
    <string name="ed_klein">Klein:</string>
    <string name="ed_gross">Groß:</string>
    <string name="ed_faktor">Faktor:</string>
    <string name="einst_tage_rezept_neu">Max. Alter neuer Rezepte</string>
    <string name="einst_tage_rezept_neu_txt">Wie viele Tage darf ein Rezept alt sein um in der Liste der Rezepte noch als neu gekennzeichnet zu werden?</string>
    <string name="news">Neuigkeiten:</string>
    <string name="m_neue_zutat">Neue Zutat</string>
    <string name="ed_zutat_existiert">Fehler: Bezeichnung ist leer oder Zutat existiert bereits.</string>
    <string name="faktoren">Umrechnungsfaktoren</string>
    <string name="m_nur_neu">Nur neue Rezepte anzeigen</string>
    <string name="m_nur_nicht_gespeichert">Nur nicht heruntergeladene anzeigen</string>
</resources>